fix text alignment

--- a/frontend/src/screens/AboutScreen.css
+++ b/frontend/src/screens/AboutScreen.css
@@ -131,7 +131,7 @@
   padding: 2rem;
 }
 
-.service-content-item h3 {
+.service-content-item h4 {
   text-align: center;
 }
 
